Fixed problem with summary button alignment with other buttons

--- a/intermine/webapp/main/resources/webapp/css/resultstables.css
+++ b/intermine/webapp/main/resources/webapp/css/resultstables.css
@@ -106,3 +106,10 @@ table.results tr td.highlightObject {
 table.results tfoot tr td {
     background-color: #d0b5d7;;
 }
+
+table.theadbuttons tr td {
+    background:none;
+    border:none;
+    padding:0;
+    margin:0;
+}
